# bdxReco

./: .gitignore  CMakeLists.txt
src/libraries/BDXmini/: JFactoryGenerator_BDXmini.h  triggerDataBDXmini.cc  triggerDataBDXmini.h  triggerDataBDXmini_factory.cc  triggerDataBDXmini_factory.h
src/libraries/Calorimeter/: CalorimeterCluster.cc  CalorimeterCluster.h  CalorimeterCluster_factory.cc  CalorimeterCluster_factory.h  CalorimeterDigiHit.h  CalorimeterDigiHit_factory.cc  CalorimeterDigiHit_factory.h  CalorimeterDigiHit_factory_MC.cc  CalorimeterDigiHit_factory_MC.h  CalorimeterHit.cc  CalorimeterHit.h  CalorimeterHit_factory.cc  CalorimeterHit_factory.h  CalorimeterMCRealHit.h  CalorimeterMCRealHit_factory.cc  CalorimeterMCRealHit_factory.h  CalorimeterSiPMHit.h  CalorimeterSiPMHit_factory.cc  CalorimeterSiPMHit_factory.h  Calorimeterfa250Converter.cc  Calorimeterfa250Converter_factory.cc  Calorimeterfa250Converter_factory.h  JFactoryGenerator_Calorimeter.h
src/libraries/DAQ/: DAQCalibrationHandler.cc  DAQCalibrationHandler.h  JEventSourceEVIODAQ.cc  JEventSourceEVIODAQ.h  JEventSourceTRIDASDAQ.cc  JEventSourceTRIDASDAQ.h  JFactoryGenerator_DAQ.h  epicsRawData.h  eventData.h  fa250ConvertedHit.h  fa250Converter.h  fa250Hit.h  fa250Mode1CalibPedSubHit.cc  fa250Mode1CalibPedSubHit.h  fa250Mode1CalibPedSubHitFFT.cc  fa250Mode1CalibPedSubHitFFT.h  fa250Mode1CalibPedSubHitFFT_factory.cc  fa250Mode1CalibPedSubHitFFT_factory.h  fa250Mode1CalibPedSubHit_factory.cc  fa250Mode1CalibPedSubHit_factory.h  fa250Mode1Hit.cc  fa250Mode1Hit.h  fa250Mode7Hit.h  fa250WaveboardV1Hit.cc  fa250WaveboardV1Hit.h
src/libraries/EPICS/: JFactoryGenerator_EPICS.h  epicsData.cc  epicsData.h  epicsData_factory.cc  epicsData_factory.h
src/libraries/EventBuilder/: CataniaEvent.h  CataniaEvent_factory.cc  CataniaEvent_factory.h  JFactoryGenerator_EventBuilder.h  MCEvent.h  TEvent.h  TEvent_factory.cc  TEvent_factory.h  TEvent_factory_BDXmini.cc  TEvent_factory_BDXmini.h  TEvent_factory_CataniaProto2.cc  TEvent_factory_CataniaProto2.h  TEvent_factory_FullMC.cc  TEvent_factory_FullMC.h  TEvent_factory_JLabFlux.cc  TEvent_factory_JLabFlux.h
src/libraries/EventBuilder/old/: MCEvent_factory.cc.old
src/libraries/ExtVeto/: ExtVetoDigiHit.h  ExtVetoDigiHit_factory.cc  ExtVetoDigiHit_factory.h  ExtVetoDigiHit_factory_MC.cc  ExtVetoDigiHit_factory_MC.h  ExtVetoHit.h  ExtVetoHit_factory.cc  ExtVetoHit_factory.h  ExtVetoPMTHit.h  ExtVetoPMTHit_factory.cc  ExtVetoPMTHit_factory.h  ExtVetoSummary.h  ExtVetoSummary_factory.cc  ExtVetoSummary_factory.h  ExtVetofa250Converter.cc  ExtVetofa250Converter_factory.cc  ExtVetofa250Converter_factory.h  JFactoryGenerator_ExtVeto.h
src/libraries/IntVeto/: IntVetoDigiHit.cc  IntVetoDigiHit.h  IntVetoDigiHit_factory.cc  IntVetoDigiHit_factory.h  IntVetoDigiHit_factory_MC.cc  IntVetoDigiHit_factory_MC.h  IntVetoHit.cc  IntVetoHit.h  IntVetoHit_factory.cc  IntVetoHit_factory.h  IntVetoSiPMHit.h  IntVetoSiPMHit_factory.cc  IntVetoSiPMHit_factory.h  IntVetoSummary.cc  IntVetoSummary.h  IntVetoSummary_factory.cc  IntVetoSummary_factory.h  IntVetofa250Converter.cc  IntVetofa250Converter_factory.cc  IntVetofa250Converter_factory.h  JFactoryGenerator_IntVeto.h
src/libraries/MC/: CalorimeterMCHit.h  ExtVetoMCHit.h  GenParticle.h  IntVetoMCHit.h  JEventSourceEVIOMC.cc  JEventSourceEVIOMC.h  PaddlesMCHit.h  UserMCData.h  VetoMCHit.h
src/libraries/Paddles/: JFactoryGenerator_Paddles.h  PaddlesDigiHit.h  PaddlesDigiHit_factory.cc  PaddlesDigiHit_factory.h  PaddlesDigiHit_factory_MC.cc  PaddlesDigiHit_factory_MC.h  PaddlesHit.h  PaddlesHit_factory.cc  PaddlesHit_factory.h  PaddlesPMTHit.h  PaddlesPMTHit_factory.cc  PaddlesPMTHit_factory.h  Paddlesfa250Converter.cc  Paddlesfa250Converter_factory.cc  Paddlesfa250Converter_factory.h
src/libraries/TT/: JFactoryGenerator_TT.h  TranslationTable.cc  TranslationTable.h  TranslationTable_factory.cc  TranslationTable_factory.h
src/libraries/system/: BDXCalibrationService.h  BDXEventProcessor.cc  BDXEventProcessor.h  BDXFactory.h  BDXObject.h  CalibrationHandler.h  CalibrationService.cc  CalibrationService.h  JEventSourceEVIOGenerator.cc  JEventSourceEVIOGenerator.h  JEventSourceTRIDASGenerator.cc  JEventSourceTRIDASGenerator.h  JFactoryGenerator_system.h  JOutput.h  JROOTOutput.cc  JROOTOutput.h
src/programs/bdxReco/: bdxReco.cc
